# multiNodeGpus_example

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_AMD.txt  training.py
slurm/: job.sh  job_viper.sh  single_job.sbatch  single_job_viper.sbatch  submit_job.sh  submit_job_viper.sh
slurm/job-management/: job_978602.out
src/myMLpackage/: simpleML.py
